# canduck

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/hooks/: log-conversation.py
docs/: architecture.md  roadmap.md
docs/handoff/: next-session.md
docs/logs/: session-2026-05-23.md  session-2026-05-25.md  session-2026-05-27.md  session-2026-05-28.md  session-2026-05-29.md  session-2026-05-31.md  session-2026-06-01.md  session-2026-06-03.md  session-2026-06-06.md  session-2026-07-12.md  session-2026-07-13.md  session-2026-07-19.md  session-2026-07-20.md
docs/pr/: w0-t00-initial-scaffolding_2026-06-08.md  w0-t00d-main-trunk-policy_2026-07-12.md  w0-t01-skills-docs_2026-07-12.md  w0-t02-parts-review_2026-07-12.md  w0-t02d-handoff-update_2026-07-12.md
docs/reports/: W0-T00-bootstrap.md  W0-T00b-workflow-pr.md  W0-T00c-status.md  W0-T02e-order-final.md  W0-T02f-equipment-rationale.md  W0-T02g-motor-selection.md
docs/skills/: bom-sourcing.md  cadquery-modeling.md  firmware-test-loop.md  host-deploy-loop.md  kicad-workflow.md  measurement-protocol.md
firmware/: README.md  platformio.ini
firmware/include/: comm.h  motor.h  pins.h  poses.h  servo_ctrl.h  vbat.h
firmware/src/: comm.cpp  main.cpp  motor.cpp  poses.cpp  (+1 more)
hardware/: parts.md  power-budget.md  schematic-spec.md  shopping-list.md
host/: README.md  pyproject.toml
host/canduck/: __init__.py  config.py  daemon.py  display_tk.py  face.py  fsm.py  gpio.py  mqtt_client.py  telemetry.py  uart_client.py  uart_smoke.py  voice.py
host/systemd/: canduck.env.example  canduck.service
